fixed overflow scrolling for iOS in foldertree

--- a/ui/apps/themes/style.less
+++ b/ui/apps/themes/style.less
@@ -2961,17 +2961,8 @@ input.flat-input {
     }
 
     .ios {
-        .io-ox-foldertree {
-            .overflow();
-        }
-    }
-    .foldertree-sidepanel {
         .foldertree-container {
-            .io-ox-foldertree {
-                .folder.selectable:hover {
-                    background-color: inherit;
-                }
-            }
+            .overflow();
         }
     }
 
